# JobTrace

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
capture/: buffer.py  screen_sampler.py  window_context.py
core/: keyboard_listener.py  state.py
engine/: jobtrace_engine.py
llm/: gemini_client.py  parser.py  prompts.py  validator.py
semantics/: chunker.py  distiller.py  timeline.py
sheets/: sheets_client.py
storage/: db.py  job_actions.py  models.py
ui/: panel.py  tray.py
utils/: image_utils.py  logger.py
