[project]
name = "jobtrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.188.0",
    "google-auth>=2.48.0",
    "google-genai>=1.60.0",
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "openai>=2.15.0",
    "pillow>=12.1.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "python-dotenv>=1.2.1",
    "pywin32>=311",
]
